--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,17 +46,12 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
 
     // Room components
-    implementation "androidx.room:room-runtime:2.4.0-rc01"
-    kapt "androidx.room:room-compiler:2.4.0-rc01"
-    implementation "androidx.room:room-ktx:2.4.0-rc01"
-
-    // Lifecycle components
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.4.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation "androidx.room:room-runtime:2.4.0"
+    kapt "androidx.room:room-compiler:2.4.0"
+    implementation "androidx.room:room-ktx:2.4.0"
 
     // Kotlin components
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-RC2'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0-RC2'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
 
 }
